[gd_scene load_steps=5 format=3 uid="uid://dcycddyyvw0or"]

[ext_resource type="Theme" uid="uid://cr2h37igr6wkn" path="res://assets/themes/basic.theme" id="1_bpq06"]
[ext_resource type="Script" path="res://scripts/EditWindow.gd" id="2_3pd4j"]
[ext_resource type="PackedScene" uid="uid://btu0bvjb0cc6j" path="res://addons/audio_preview/AudioStreamPreview.tscn" id="3_xqp8l"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i22pi"]
bg_color = Color(0, 0, 0, 1)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15
expand_margin_left = 5.0
expand_margin_top = 30.0
expand_margin_right = 5.0
expand_margin_bottom = 5.0
shadow_size = 13

[node name="Window" type="Window"]
auto_translate_mode = 1
transparent_bg = true
title = "Create a new clip"
initial_position = 2
size = Vector2i(450, 184)
wrap_controls = true
transient = true
exclusive = true
always_on_top = true
transparent = true
min_size = Vector2i(450, 0)
theme = ExtResource("1_bpq06")
theme_override_styles/embedded_border = SubResource("StyleBoxFlat_i22pi")
script = ExtResource("2_3pd4j")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Clip Information"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxName" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxName"]
layout_mode = 2
text = "Name"

[node name="LineEdit" type="LineEdit" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxName"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "New Clip"

[node name="HBoxColor" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxColor"]
layout_mode = 2
text = "Color"

[node name="ColorPickerButton" type="ColorPickerButton" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxColor"]
layout_mode = 2
size_flags_horizontal = 3
edit_alpha = false

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="VBoxStream" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxStream" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxStream"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxStream/HBoxStream"]
layout_mode = 2
text = "Stream"

[node name="ButtonPickStream" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxStream/HBoxStream"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NativeFileDialog" type="NativeFileDialog" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxStream/HBoxStream/ButtonPickStream"]
title = "Open a File"
file_mode = 0

[node name="HBoxPlayer" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxStream"]
layout_mode = 2

[node name="Button" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxStream/HBoxPlayer"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.105882, 0, 0.160784, 1)
text = "Play"

[node name="AudioStreamPreview" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxStream/HBoxPlayer" instance=ExtResource("3_xqp8l")]
layout_mode = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="PanelContainer/MarginContainer/VBoxContainer/VBoxStream/HBoxPlayer"]
max_polyphony = 5

[node name="HSeparator3" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxVolume" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxVolume"]
layout_mode = 2
text = "Volume"

[node name="HSlider" type="HSlider" parent="PanelContainer/MarginContainer/VBoxContainer/HBoxVolume"]
layout_mode = 2
